--- a/anim.html
+++ b/anim.html
@@ -6,6 +6,20 @@
 	* {
 		/*border: 1px solid red;*/
 	}
+	
+	/*h1 {
+		font-size: 16px;
+        font-family: sans-serif;
+        color: rgb(100, 100, 100);
+        text-align: center;
+        padding-top: 50px;
+
+        }  */
+          
+    
+
+
+	
 	body{
 		position: relative;
 	}
