--- a/sliderStart.html
+++ b/sliderStart.html
@@ -9,6 +9,7 @@
         padding: 0;
     }
     
+    
     img {
         width: 360px;
         height: 240px;
@@ -87,9 +88,9 @@
         <a href="#" class="control_next">&gt;</a>
         <a href="#" class="control_prev">&lt;</a>
         <ul>
-            <li><img src="face.jpg"></li>
-            <li><img src="face2.jpg"></li>
-            <li><img src="face3.jpg"></li>
+            <li><img src="fall01lr.jpg"></li>
+            <li><img src="fall02lr.jpg"></li>
+            <li><img src="fall03lr.jpg"></li>
         </ul>
     </div>
 </body>
